PracticeWebProjects/wwwroot/css/site.css
html {
  font-size: 14px;
}

body {
    background: url('/images/Designer.jpeg') no-repeat center center fixed;
    background-size:cover;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px;
}

/*Stylization for Home page view*/
.containerChefsListDisplay {
    display: block;
    border: 2px solid #ffeb3b;
    border-color: transparent;
    border-radius: 20px;
    background-color: brown;
    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
    width: 250px;
    align-self: flex-start;
}

.containerForButton {
    display: flex;
    height: 400px;
    box-sizing:border-box;
    margin-block-start: 40px;
    gap:20px;
}

.containerForButton #buttonsOrder {
    display:block;
    position:center;
    flex-direction: column;
    align-items: center; /* Center buttons horizontally */
    align-self:center;
    justify-content: center; /* Center buttons vertically */
    justify-self:center;
    justify-items:center;
    width:auto;
    height: auto;
}



/*Stylization for _ChefsListDisplay partial view*/
.containerPartialChef #chefNameId{
    color:white;
    font-family:'Cambria Math';
    font:italic;
    font-size:20px;
}

.containerPartialChef #chefInfo {
    color:white;
}

/*Stylization for Budget page view*/

.dailyIncomeResultContainer {
    display:flex;
    flex-direction:column;
    align-items:center;
    align-content:center;
    justify-content:center;
    background-color:aqua;
    border:groove;
    border-color:darkblue;
}

